--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,12 @@
 [package]
-name = "cas-core-lib"
+name = "cas_core_lib"
 version = "0.1.7"
 edition = "2021"
 description = "This is a Rust library providing external facing functions to performant and trusted encryption in Rust"
 license = "Apache-2.0"
 
 [lib]
-name="cas-core-lib"
+name="cas_core_lib"
 path = "src/lib.rs"
 crate-type = ["dylib"]
 
